# Security-Sentinel-Linux-and-Windows-

./: .gitignore  ABOUT.md  AIAssistant.tsx  App.tsx  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Card.tsx  Dashboard.tsx  IMPLEMENTATION_SUMMARY.md  Icon.tsx  README.md  README_CPP.md  Sidebar.tsx  _config.yml  build.sh  constants.ts  create-release.md  demo.bat  geminiService.ts  index.css  index.html  metadata.json  package-lock.json  package.json  release.sh  types.ts  vite.config.ts
.github/: WORKFLOWS.md  dependabot.yml
.github/ISSUE_TEMPLATE/: documentation_issue.md  enhanced_bug_report.md  enhanced_feature_request.md  question_support.md
.github/workflows/: README.md  ci-cpp.yml  ci-web.yml  ci.yml  code-quality.yml  cpp-native.yml  deploy-pages.yml  docs.yml  pr-automation.yml  pr-checks.yml  pr-validation.yml  release.yml  security.yml  web-interface.yml  workflow-test.yml
components/: AIAssistant.tsx  Dashboard.tsx  Header.tsx  NetworkMonitor.tsx  Sidebar.tsx  ThreatProtection.tsx  icon.tsx
docs/: .gitignore  Gemfile  _config.yml  index.md
docs/_layouts/: default.html
docs/wiki/: API-Reference.md  Quick-Start.md  (+1 more)
include/: AIAssistant.h  Dashboard.h  GeminiClient.h  NetworkMonitor.h  SecurityApp.h  SecurityMonitor.h  ThreatProtection.h  Utils.h  ViewManager.h
services/: geminiService.ts
src/: AIAssistant.cpp  Dashboard.cpp  GeminiClient.cpp  NetworkMonitor.cpp  SecurityApp.cpp  SecurityMonitor.cpp  ThreatProtection.cpp  Utils.cpp  ViewManager.cpp  main.cpp
wiki/: Architecture-Overview.md  Common-Issues.md  Home.md  Installation-Guide.md
